WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49203
Crash zooming into Word document at office.live.com
https://bugs.webkit.org/show_bug.cgi?id=49203
Summary
Crash zooming into Word document at office.live.com
mitz
Reported
2010-11-08 14:00:51 PST
<
rdar://problem/8119781
> Patch forthcoming
Attachments
Stop RenderBox::styleDidChange() from triggering layout
(4.27 KB, patch)
2010-11-08 14:16 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-11-08 14:16:40 PST
Created
attachment 73283
[details]
Stop RenderBox::styleDidChange() from triggering layout
Darin Adler
Comment 2
2010-11-08 14:22:31 PST
Comment on
attachment 73283
[details]
Stop RenderBox::styleDidChange() from triggering layout Is it OK to have renderer functions that can trigger layout? It seems it’s only safe to call those functions if they are the very last ones you call.
mitz
Comment 3
2010-11-08 14:49:45 PST
Fixed in <
http://trac.webkit.org/changeset/71576
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug