<rdar://problem/8119781> Crash zooming into Word document at office.live.com https://bugs.webkit.org/show_bug.cgi?id=49203

Reviewed by Darin Adler.

WebCore:

Test: fast/css/zoom-change-triggering-layout.html

RenderBox::styleDidChange() was calling scrollLeft() and scrollTop(), whose RenderTextControlSingleLine
overrides can trigger layout.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::styleDidChange): Use the layer directly for updating the scroll offsets when
the zoom factor changes.

LayoutTests:

* fast/css/zoom-change-triggering-layout-expected.txt: Added.
* fast/css/zoom-change-triggering-layout.html: Added.



Canonical link: https://commits.webkit.org/62063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71576 268f45cc-cd09-0410-ab3c-d52691b4dbfc